@@ -53,6 +53,8 @@
 - NEW: Offer automatic update and retry if a commit failed due
        to an outdated working copy (Stefan Fuhrmann)
 - NEW: Directly support single file c/o from c/o dialog (Stefan Fuhrmann)
+- NEW: Toolbar buttons to change the whitespace diff options in
+       TortoiseMerge. (Stefan)
 - BUG: Merged revisions must be counted only once in stats (Stefan Fuhrmann)
 
 Version 1.6.7
